media/css/zamboni/mobile.css
/* ... */
.num_ratings,
.review .old-version,
.install-wrapper,
.install-wrapper a {
    font-family: "Droid Sans", sans-serif;
}
#content h2,
#eula h2 {
    font-style: italic;
    margin: 0 14px 14px;
    font-size: 1.4em;
}
#content h3 {
    font-size: 1.2em;
    padding-bottom: 2px;
}
.copy p {
    color: #444;
}

/************************************/
/*             GRADIENTS            */
/************************************/

/* 'Mozilla' */
.moz-menu .tab {
    background: #33589f;
/*    background: -webkit-gradient(
        linear,
        left bottom,
        left top,
        from(rgb(42,65,135)),
        to(rgb(59,105,177))
    );
    background: -moz-linear-gradient(
        center bottom,
        rgb(42,65,135) 0%,
        rgb(59,105,177) 100%
    );
    background: linear-gradient(
        center bottom,
        rgb(42,65,135) 0%,
        rgb(59,105,177) 100%
    );
*/}

footer:before,
.tabs {
    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAABCAYAAAASC7TOAAAAEElEQVQIHWP8//8/Aw7wHwBR6AP+G53o6QAAAABJRU5ErkJggg=='),
                      -moz-linear-gradient(#fff, #dcedfd);
    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAABCAYAAAASC7TOAAAAEElEQVQIHWP8//8/Aw7wHwBR6AP+G53o6QAAAABJRU5ErkJggg=='),
                      -webkit-gradient(linear, left top, left bottom, from(#fff), to(#dcedfd));
}

html {
    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAABCAYAAAASC7TOAAAAEElEQVQIHWP8//8/Aw7wHwBR6AP+G53o6QAAAABJRU5ErkJggg=='),
                      -moz-linear-gradient(#dcedfd 0, #fff 200px);
    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAABCAYAAAASC7TOAAAAEElEQVQIHWP8//8/Aw7wHwBR6AP+G53o6QAAAABJRU5ErkJggg=='),
                      -webkit-gradient(linear, left top, left 200, from(#dcedfd), to(#fff));

}


/************************************/
/*            FANCY ARROW           */
/************************************/

#sort-menu .label span:after,
.moz-menu .tab a:after,
.menu a.expando:after {
    content: "\00a0";
    display: block;
    position: absolute;
    right: 8px;
    width: 0;
    height: 0;
    -moz-transition: .3s -moz-transform ease;
    -webkit-transition: .3s -webkit-transform ease;
    -moz-transform-origin: 50% 25%;
    -webkit-transform-origin: 50% 25%;
    top: 16px;
    border: 5px solid transparent;
    border-top-color: black;
    pointer-events: none;
}

/************************************/
/*              GENERAL             */
/************************************/

.htruncate {
    white-space: nowrap;
    overflow: hidden;
}

table {
    width: 100%;
    font-family: Helvetica, "Droid Sans", sans-serif;
}
table th {
    text-align: right;
    padding: 0 8px 8px 0;
    font-weight: bold;
    color: #666;
}
#content {
    width: 100%;
    overflow: hidden;
    position: relative;
}

#content > details,
#content > p,
#content > .copy,
#content > .menu {
    margin: 0 14px;
}

.copy {
    line-height: 1.2em;
}

.text-listing h2,
#eula h2 {
    padding-bottom: 4px;
    border-bottom: 1px solid #ccc;
    box-shadow: 0 1px #fff;
}

.paginator {
    display: -moz-box;
    display: -webkit-box;
    text-align: center;
    color: #ccc;
    font-size: 1.1em;
    width: 100%;
    height: 40px;
}
.paginator .page {
    color: #666;
    margin: 0 2%;
    -moz-box-flex: 1;
    -webkit-box-flex: 1;
}
.paginator a {
    padding: 14px;
}
.paginator .next a:after {
    content: ' \00bb';
}
.paginator .prev a:before {
    content: ' \00ab';
}
/************************************/
/*              HEADER              */
/************************************/
#home-header,
.mini-header {
    margin: 0 14px;
}
.moz-menu {
    -moz-transition: .5s top ease;
    -webkit-transition: .5s top ease;
    position: relative;
    top: 0;
    z-index: 100;
}
.moz-menu .tab {
    border-radius: 0 0 6px 6px;
    -moz-border-radius: 0 0 6px 6px;
    -webkit-border-radius: 0 0 6px 6px;
    box-shadow: 0 -3px rgba(0,0,0,.2) inset;
    -moz-box-shadow: 0 -3px rgba(0,0,0,.2) inset;
    -webkit-box-shadow: 0 -3px rgba(0,0,0,.2) inset;
}
.moz-menu .tab a {
    background: url(../../img/zamboni/global/wordmark.png) no-repeat 8px 6px;
    display: block;
    height: 30px;
    line-height: 22px;
    text-align: right;
    color: white;
    font-style: italic;
    padding: 8px 25px;
}
.mini-header .moz-menu .tab {
    width: 104px;
    float: right;
    overflow: hidden;
    position: relative;
}
.mini-header .moz-menu .tab a {
    text-indent: -9999px;
    text-align: left;
}
.moz-menu .menu-items li {
    border-bottom: 1px solid #294976;
    border-top: 1px solid #537ab4;
    background-color: #3a67af;
/*    background-image: -moz-linear-gradient(#3a67af, #385eaa);
    background-image: -webkit-gradient(linear, left top, left bottom, from(#3a67af), to(#385eaa));
*/    height: 50px;
    width: 100%;
    padding: 0 14px;
}
.moz-menu .menu-items a {
    font-family: "Trebuchet MS", "Droid Sans", sans-serif;
    color: white;
    font-size: 17px;
    text-transform: uppercase;
    font-weight: bold;
    display: block;
    height: 26px;
    line-height: 26px;
    padding: 12px 0;
}
.moz-menu .menu-items {
    position: absolute;
    width: 100%;
    left: -14px;
    bottom: 46px;
}
.mini-header .moz-menu .menu-items {
    bottom: 0;
}

.moz-menu .tab a:after {
    top: 18px;
    border: 6px solid transparent;
    border-top-color: white;
}

.moz-menu.expand .tab a:after {
    -moz-transform: rotate(180deg);
    -webkit-transform: rotate(180deg);
}
.moz-menu.expand {
    top: 312px;
}

header hgroup {
    margin-top: 8px;
    position: relative;
    padding-left: 80px;
}
header #home, header .back-link {
    clear: both;
    color: #447BC4;
    float: left;
    padding: 14px 0;
    line-height: 14px;
}
.mini-header .site-title {
    padding-right: 120px;
}
.mini-header .site-title a {
    font-size: 22px;
    line-height: 22px;
}
/* ... */

